# Forest

./: .gitignore  .gitmodules  Build_Release.bat  CMakeLists.txt  Readme.md  Todo  profiling.cfg
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Engine.h  Test.cpp  Test.h
Engine/src/Engine/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h  core.h  pcheader.h
Engine/src/Engine/Controller/: OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Buffer.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCode.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  KeyMap.h
Engine/src/Engine/Math/: Math.cpp  Math.h  Random.cpp  Random.h  Vector2.cpp  Vector2.h
Engine/src/Engine/Memory/: LinearAllocator.cpp  LinearAllocator.h  RenderMemoryPool.cpp  RenderMemoryPool.h
Engine/src/Engine/Profile/: CMakeLists.txt  Instrumentor.h  ProfileLayer.cpp  ProfileLayer.h  ProfileMacros.h  Timer.h
Engine/src/Engine/Project/: Project.cpp  Project.h  ProjectUtils.cpp  ProjectUtils.h
Engine/src/Engine/Reflection/: Builder.h  MetaStruct.h  Reflect.h  ReflectMacro.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  UniformBuffer.cpp  UniformBuffer.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Renderer/Camera/: Camera.h  EditorCamera.cpp  EditorCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/src/Engine/Renderer/Shader/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Scene/: Component.h  Entity.cpp  Entity.h  NativeScriptComponent.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptEntity.cpp  ScriptEntity.h
Engine/src/Engine/Scene/Components/: BaseComponent.h  BoxCollider2DComponent.h  CameraComponent.h  CircleCollider2DComponent.h  CircleComponent.h  IDComponent.h  Rigidbody2DComponent.h  ScriptComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h
Engine/src/Engine/Scripts/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h  Utils.cpp  Utils.h
Engine/src/Engine/Scripts/ScriptGlue/: Entity.h  Input.h  Log.h
Engine/src/Engine/Serialization/: ComponentSerialize.cpp  ComponentSerialize.h  EntitySerialize.cpp  EntitySerialize.h  ProjectSerialize.cpp  ProjectSerialize.h  SceneSerialize.cpp  SceneSerialize.h  SerializeUtils.cpp  SerializeUtils.h
Engine/src/Engine/Utils/: FilePlatformUtils.h
Engine/src/Platform/DirectX12/: DirectX12Buffer.cpp  DirectX12Buffer.h  DirectX12Context.cpp  DirectX12Context.h  DirectX12RenderAPI.cpp  DirectX12RenderAPI.h  DirectX12RendererAPI.cpp  DirectX12RendererAPI.h  DirectX12Shader.cpp  DirectX12Shader.h  DirectX12VertexArray.cpp  DirectX12VertexArray.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Utils.cpp  Utils.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Engine/src/Platform/Windows/: WindowsFilePlatformUtils.cpp  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
EngineEditor/: .forestproj  .gitignore  CMakeLists.txt  EngineEditor.forestproj  imgui.ini
EngineEditor/Sandbox/: Forest2DProj.forestproj  Sandbox.forestproj
EngineEditor/Sandbox/Assets/Scenes/: ExampleScene.scene  Physics2D.scene  Sample.scene  Test.scene
EngineEditor/Sandbox/Assets/Scripts/: CMakeLists.txt
EngineEditor/Sandbox/Assets/Scripts/src/: Player.cs
EngineEditor/TestProject/: TestProject.forestproj
EngineEditor/TestProject/Assets/Scenes/: Sample.scene
EngineEditor/assets/Scripts/src/: Player.cs
EngineEditor/assets/cache/shaders/opengl/: Renderer2D_CircleShader.glsl.opengl.frag.spv  Renderer2D_CircleShader.glsl.opengl.vert.spv  Renderer2D_CircleShader.glsl.vulkan.frag.spv  Renderer2D_CircleShader.glsl.vulkan.vert.spv  hash.yaml  (+4 more)
EngineEditor/assets/scenes/: ExampleScene.yaml  Physics2D.scene  Test.scene  Test.yaml
EngineEditor/assets/shaders/: ColorShader.glsl  Renderer2D_CircleShader.glsl  Renderer2D_LineShader.glsl  TextureShader.glsl
EngineEditor/resources/: imgui.ini
EngineEditor/resources/assets/scenes/: Physics2D.scene
EngineEditor/resources/assets/shaders/: Renderer2D_CircleShader.glsl  Renderer2D_QuadShader.glsl
EngineEditor/settings/: imgui.ini
EngineEditor/src/: EngineEditor.cpp  EngineEditor.h  EngineEditorApp.cpp  Utils.cpp  Utils.h
EngineEditor/src/Camera/: EditorCamera.cpp  EditorCamera.h
EngineEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  UIUtils.cpp  UIUtils.h
EngineEditor/src/Particle/: ParticleSystem.cpp  ParticleSystem.h
Forest/: .gitignore  CMakeLists.txt  Forest.sln  Forest.vcxproj  Forest.vcxproj.filters
Forest/assets/shaders/: ColorShader.glsl  FlatColorShader.glsl  TextureShader.glsl
Forest/src/: Application.cpp  Application.h  Forest2D.cpp  Forest2D.h  ForestApp.cpp
Forest/src/Particle/: ParticleSystem.h
ScriptCore/: CMakeLists.txt
ScriptCore/src/: Main.cs  Player.cs  Test.cs
ScriptCore/src/Engine/: Log.cs  Math.cs
ScriptCore/src/Engine/Input/: Input.cs  KeyCode.cs
ScriptCore/src/Engine/Scene/: Entity.cs
(+12 files in other folders)
